fix: Implement responsive layout adjustments for header, resolve mobile overflow issues, and update site icons.

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -4,7 +4,7 @@
     pointer-events: none;
     backdrop-filter: blur(0.5rem);
     background: linear-gradient(to bottom, var(--page-background), var(--static-transparent));
-    mask-image: linear-gradient(rgba(0,0,0) 25%, rgba(0, 0, 0, 0) 100%);
+    mask-image: linear-gradient(rgba(0, 0, 0) 25%, rgba(0, 0, 0, 0) 100%);
     mask-size: 100% 100%;
 }
 
@@ -12,10 +12,12 @@
     .position {
         top: auto;
         bottom: var(--static-space-24);
+        width: 100%;
+        left: 0;
+        right: 0;
     }
 
     .mask {
-        transform: rotate(180deg);
         bottom: 0;
     }
 }
